[package]
name = "web_q_and_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
handle-errors = { path = "handle-errors" }
uuid = { version = "0.8", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
